<resources>
    <string name="app_name">LibraryManagement-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <!--<string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string> -->
    <string name="title_name_hint">Title Name</string>
    <string name="create_title_button">Create Title</string>
    <string name="title_description_hint">Description</string>
    <string name="title_genre_hint">Genre</string>
    <string name="title_type_hint">Type</string>
    <string name="hello_first_fragment">hi</string>
    <string name="next">hi again</string>
    <string name="previous">hi again</string>
    <string name="first_fragment_label">hi</string>
    <string name="second_fragment_label">hi2</string>
</resources>